[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UnitPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Poppins-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="UnitPanel" type="Container"]
margin_right = 876.0
margin_bottom = 276.0
script = ExtResource( 1 )

[node name="UnitDisplay" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_right = 276.0
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 276.0
margin_right = -12.0
rect_min_size = Vector2( 576, 0 )

[node name="UnitName" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 588.0
margin_bottom = 75.0
theme = SubResource( 2 )
text = "Empty Cell"
fit_content_height = true

[node name="HealthBarContainer" type="Control" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 588.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 56 )

[node name="HP" type="RichTextLabel" parent="VBoxContainer/HealthBarContainer"]
margin_top = 4.0
margin_right = 588.0
margin_bottom = 51.0
rect_min_size = Vector2( 48, 0 )
theme = SubResource( 4 )
text = "HP:"
fit_content_height = true

[node name="Empty" type="ColorRect" parent="VBoxContainer/HealthBarContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 4.0
margin_bottom = -4.0
color = Color( 0.803922, 0, 0, 1 )

[node name="HealthBar" type="ColorRect" parent="VBoxContainer/HealthBarContainer"]
anchor_right = 1.0
margin_left = 52.0
margin_top = 4.0
margin_bottom = 52.0
color = Color( 0.0470588, 0.831373, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthCount" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 588.0
margin_bottom = 186.0
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[right]0/0[/right]"
text = "0/0"
fit_content_height = true
